--- a/css/home.css
+++ b/css/home.css
@@ -4,14 +4,17 @@
 
 
     /* FIX FOR PHONES */
-    /* FILL ROOT FOR DARK THEMES */
-    /* PUT IN COLOR FOR OVERLAY AS WELL */
 
 
 
 
 /* Color Scheme */
-:root {}
+:root {
+  --sidenav-color: #92dccd;
+  --overlay-color: rgba(146,220,205,0.9);
+  --sidenav-scroll: #dbe4cf;
+  --sidenav-hover: #fbfbfb;
+}
 
 /* The side navigation menu */
 .sidenav {
@@ -21,7 +24,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: var(--circle1-color);
+  background-color: var(--sidenav-color);
   overflow-x: hidden;
   padding-top: 50px;
   transition: 0.5s;
@@ -34,7 +37,7 @@
   z-index: 1;
   left: 24vw;
   top: 0;
-  background-color: rgba(146, 220, 205, 0.9);
+  background-color: var(--overlay-color);
   overflow-x: hidden;
   transition: 0.5s;
 }
@@ -44,22 +47,22 @@
   width: 7px;
 }
 .sidenav::-webkit-scrollbar-track {
-  background: var(--circle1-color);
+  background: var(--sidenav-color);
 }
 .sidenav::-webkit-scrollbar-thumb {
-  background-color: var(--circle2-color) ;
+  background-color: var(--sidenav-scroll) ;
   border-radius: 6px;
-  border: 2px solid var(--circle1-color);
+  border: 2px solid var(--sidenav-color);
 }
 /* Overlay Scrollbar */
 .overlay::-webkit-scrollbar {
   width: 7px;
 }
 .overlay::-webkit-scrollbar-track {
-  background: var(--circle1-color);
+  background: var(--overlay-color);
 }
 .overlay::-webkit-scrollbar-thumb {
-  background-color: var(--circle1-color);
+  background-color: var(--sidenav-color);
 }
 
 
@@ -93,10 +96,10 @@
 
 /* Mouse over stuff animation */
 .sidenav .closebtn:hover{
-  color: var(--bg-color);
+  color: var(--sidenav-hover);
 }
 .date:hover .datebtn .txt{
-  color: var(--bg-color);
+  color: var(--sidenav-hover);
 }
 .date:hover .overlay {
   width: 76vw;
